--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.1",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.14"
   }
 }
